# time-tracker-app

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  generate-package-manifests.yml  release.yml
backend/: Cargo.toml  tauri.conf.json
backend/src/: autostart.rs  commands.rs  database.rs  idle.rs  main.rs  models.rs  pomodoro.rs  tracker.rs  tray.rs  window.rs
backend/src/commands/: activities.rs  categories.rs  common.rs  domains.rs  export.rs  idle.rs  manual_entries.rs  mod.rs  plugins.rs  rules.rs  settings.rs  stats.rs  tracking.rs  window.rs
backend/src/database/: activities.rs  categories.rs  common.rs  manual_entries.rs  mod.rs  models.rs  plugins.rs  rules.rs  settings.rs  stats.rs
backend/src/plugin_system/: README.md  api.rs  discovery.rs  extensions.rs  loader.rs  mod.rs  registry.rs
backend/src/plugins/: billing.rs  goals.rs  pomodoro.rs  projects_tasks.rs
frontend/: App.tsx  index.css  main.tsx
frontend/components/Categories/: Categories.tsx
frontend/components/Charts/: AppChart.tsx  CategoryChart.tsx  index.ts
frontend/components/Common/: Button.tsx  Card.tsx  CustomToast.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  SkeletonLoader.tsx  Toggle.tsx  index.ts
frontend/components/Dashboard/: ActiveProjectSelector.tsx  BillableWidget.tsx  CategoryChart.tsx  DailyTrend.tsx  Dashboard.tsx  GoalProgressWidget.tsx  Insights.tsx  PomodoroWidget.tsx  ProjectBreakdown.tsx  StatsOverview.tsx  TopApps.tsx  TopWebsites.tsx  index.ts
frontend/components/Goals/: GoalAlerts.tsx  GoalCard.tsx  GoalForm.tsx  Goals.tsx  index.ts
frontend/components/History/: History.tsx  HistoryDateHeader.tsx  HistoryFilters.tsx  HistoryItem.tsx  HistoryList.tsx  useHistoryItems.ts  useHistoryScroll.ts
frontend/components/IdlePrompt/: IdlePrompt.tsx  index.ts
frontend/components/Layout/: DateRangeSelector.tsx  Header.tsx  Layout.tsx  Sidebar.tsx  index.ts
frontend/components/ManualEntry/: ManualEntryForm.tsx  ManualEntryModal.tsx  index.ts
frontend/components/Marketplace/: InstalledPlugins.tsx  Marketplace.tsx  PluginCard.tsx  PluginDetails.tsx  PluginSearch.tsx  index.ts
frontend/components/Pomodoro/: FocusSessions.tsx  Pomodoro.tsx  PomodoroTimer.tsx  PomodoroTransitionModal.tsx  index.ts
frontend/components/Projects/: ProjectForm.tsx  Projects.tsx  index.ts
frontend/components/Reports/: Reports.tsx
frontend/components/Rules/: Rules.tsx
frontend/components/Settings/: AboutSettings.tsx  CategoriesSettings.tsx  GeneralSettings.tsx  RulesSettings.tsx  Settings.tsx  useSettingsSave.ts
frontend/components/Tasks/: TaskForm.tsx  Tasks.tsx  index.ts
frontend/components/Timeline/: Timeline.tsx
frontend/hooks/: index.ts  useActivities.ts  useCategories.ts  useDeleteFocusSession.ts  useFocusSessions.ts  useGoals.ts  useKeyboardShortcuts.ts  useManualEntries.ts  usePluginFrontend.ts  usePluginRegistry.ts  usePlugins.ts  usePomodoro.ts  useProjects.ts  useRules.ts  useSettings.ts  useTasks.ts  useTauriEvents.ts  useTracker.ts
frontend/services/: api.ts
frontend/services/api/: activities.ts  categories.ts  domains.ts  export.ts  idle.ts  index.ts  manualEntries.ts  rules.ts  settings.ts  stats.ts  tracking.ts  utils.ts  window.ts
frontend/store/: index.ts  store.ts
frontend/types/: index.ts  plugin.ts
frontend/utils/: export.ts  format.ts  goals.ts  pluginLoader.ts  toast.ts  validation.ts
plugin-sdk/: Cargo.toml
plugin-sdk/src/: api.rs  extensions.rs  ffi.rs  lib.rs  plugin.rs
plugins/: README.md
plugins/billing/: Cargo.toml  README.md  plugin.toml
plugins/billing/src/: lib.rs
plugins/goals/: Cargo.toml  README.md  plugin.toml
plugins/goals/src/: lib.rs
plugins/pomodoro/: Cargo.toml  plugin.toml
plugins/pomodoro/src/: lib.rs
plugins/projects-tasks/: Cargo.toml
plugins/projects-tasks/src/: lib.rs
website/: package-lock.json  package.json
website/src/: App.tsx  config.ts  index.css
website/src/components/: Docs.tsx  Download.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  KeyBenefits.tsx  MarkdownRenderer.tsx  PluginMarketplace.tsx  Plugins.tsx  Screenshots.tsx  ThemeToggle.tsx  WhyChoose.tsx
website/src/contexts/: ThemeContext.tsx
website/src/data/: screenshots.ts  useCases.ts
website/src/pages/: DocViewer.tsx  Docs.tsx  Home.tsx  Marketplace.tsx
