[workspace]
members = ["backend", "plugin-sdk"]
resolver = "2"

[workspace.package]
version = "0.3.0"
authors = ["TimeTracker"]
license = "MIT"
repository = "https://github.com/bthos/time-tracker-app"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
