[package]
name = "time-tracker-app"
version = "0.2.2"
description = "Desktop application for automatic time tracking"
authors = ["TimeTracker"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-save", "window-all", "path-all", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
csv = "1.3"
active-win-pos-rs = "0.9"
auto-launch = "0.5"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "errhandlingapi", "tlhelp32", "handleapi", "psapi", "winnt"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
