[package]
name = "time-tracker-app"
version = "0.2.8"
description = "Desktop application for automatic time tracking"
authors = ["TimeTracker"]
license = "MIT"
repository = "https://github.com/bthos/time-tracker-app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-set-title", "window-close", "window-set-focus", "window-show", "dialog-save", "path-all", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
csv = "1.3"
active-win-pos-rs = "0.9"
auto-launch = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "errhandlingapi", "tlhelp32", "handleapi", "psapi", "winnt"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 2
strip = true
