[package]
name = "time-tracker-pomodoro-plugin"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "Pomodoro plugin for Time Tracker"

[lib]
crate-type = ["cdylib"]

[dependencies]
time-tracker-plugin-sdk = { path = "../../plugin-sdk" }
serde.workspace = true
serde_json.workspace = true
